--- a/basic_calculation/basic_calculation/MainPage.xaml
+++ b/basic_calculation/basic_calculation/MainPage.xaml
@@ -47,10 +47,9 @@
                     VerticalOptions="FillAndExpand" 
                     HorizontalOptions="FillAndExpand" IsReadOnly="True" Keyboard="Numeric"/>
 
-
-            <!--最初Fだったんで"小数"にしときました-->
             <Label  x:Name="SD"
-                    Text="小数" 
+                    Text="分数" 
+                    TextColor="Black"
                     HorizontalOptions="End"
                     />
 
@@ -61,7 +60,7 @@
 
 
         <Label x:Name="resultText" 
-               FontSize="Medium"  
+               FontSize="Large"  
                BackgroundColor="White" 
                Text=""
                TextColor="Black"
@@ -72,101 +71,101 @@
 
         <Label Text="Ans"
                BackgroundColor="White"
-               FontSize="Small"
+               FontSize="Large"
                TextColor="Black"
                VerticalTextAlignment="Center"
                Grid.Row="1" Grid.Column="1" Padding="20,0"/>
 
 
-        <Button Text="F" Grid.Row="1" Grid.Column="0"
+        <Button Text="D" Grid.Row="1" Grid.Column="0"
                 BackgroundColor="#02FFFA" TextColor="Black"
                 FontSize="30" BorderRadius="20" Clicked="OnSelectSD"/>
 
         <Button Text="7" Grid.Row="2" Grid.Column="0"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="8" Grid.Row="2" Grid.Column="1"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="9" Grid.Row="2" Grid.Column="2"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="4" Grid.Row="3" Grid.Column="0"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="5" Grid.Row="3" Grid.Column="1"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="6" Grid.Row="3" Grid.Column="2"
                 BackgroundColor="#B1B1B1" TextColor="White" 
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"  />
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="1" Grid.Row="4" Grid.Column="0"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="2" Grid.Row="4" Grid.Column="1"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="3" Grid.Row="4" Grid.Column="2"
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="0" Grid.Row="5" Grid.Column="0" 
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="." Grid.Row="5" Grid.Column="1" 
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="□" Grid.Row="5" Grid.Column="2" 
                 BackgroundColor="#B1B1B1" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="÷" Grid.Row="3" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="×" Grid.Row="3" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="-" Grid.Row="4" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="+" Grid.Row="4" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
         <Button Text="/" Grid.Row="5" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="%" Grid.Row="5" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
 
         <Button Text="(" Grid.Row="6" Grid.Column="3"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text=")" Grid.Row="6" Grid.Column="4"
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="C" Grid.Row="2" Grid.Column="4" 
                 BackgroundColor="#02FFFA" TextColor="Black"
-                FontSize="36" BorderRadius="0" Clicked="OnClear" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnClear"/>
         <Button Text="DEL" Grid.Row="2" Grid.Column="3"
                 BackgroundColor="#02FFFA" TextColor="Black"
-                FontSize="Default" BorderRadius="0" Clicked="OnDel" CornerRadius="10"/>
+                FontSize="Medium" BorderRadius="20" Clicked="OnDel"/>
 
         <Button Text="=" Grid.Row="6" Grid.Column="2" 
                 BackgroundColor="Gray" TextColor="White"
-                FontSize="36" BorderRadius="0" Clicked="OnSelect" CornerRadius="10"/>
+                FontSize="36" BorderRadius="20" Clicked="OnSelect"/>
 
         <Button Text="Cal" Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2"
                 BackgroundColor="#02FFFA" TextColor="Black"
-                FontSize="Large" BorderRadius="0" Clicked="OnCalculate" CornerRadius="10"/>
+                FontSize="Large" BorderRadius="20" Clicked="OnCalculate"/>
 
     </Grid>
 </ContentPage>
